--- a/index.html
+++ b/index.html
@@ -3,18 +3,144 @@
 <head>
     <meta charset="UTF-8">
     <title>title</title>
+    <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
-    <header>
+    <header class="">
+
+        <nav class="outer-container ">
+            <ul class="inner-container-wide header-nav">
+                <li>Case Studies</li>
+                <li>Services</li>
+                <li>Contact Us</li>
+            </ul>
+        </nav>
+
+        <section class="outer-container">
+            <div class="header-inner inner-container-small">
+                <h1>Your website is an investment in the success of your business.</h1>
+                <p>We are here to help you succeed.</p>
+                <button class="header-button" type="submit">Let's work together</button>
+            </div>
+        </section>
+
+
+            <img class="squiggle" src="assets/squiggle_line_stripe.svg" alt="">
+
 
     </header>
 
-    <main>
 
+    <main>
+        <section class="outer-container">
+            <div class="inner-container-small introduction">
+                <p>Rekupe is a digital agency in Los Angeles</p>
+                <p>We use strategic UX, SEO optimization and beautiful visual designs to help your business grow.</p>
+                <p>We see every project as a fresh opportunity, pushing ourselves to create new digital experiences.</p>
+                <p>Have a question? <a href="">Click here</a> to contact us!</p>
+            </div>
+        </section>
+
+        <section class="outer-container">
+            <div class="inner-container-wide">
+
+                <article class="work-article-container">
+                    <div>
+                        <h3>Rolling Stone</h3>
+                        <img src="assets/squiggle_line.svg">
+                        <p>You know Rolling Stone. It’s the definitive voice in music, politics and culture. It’s a global icon.</p>
+                        <a href="">View project</a>
+                    </div>
+                    <span>
+                        <img src="assets/work-image-01.jpeg">
+                    </span>
+                </article>
+
+                <article class="work-article-container">
+                    <div>
+                        <h3>Variety</h3>
+                        <img src="assets/squiggle_line.svg">
+                        <p>Variety is an industry leader for breaking entertainment news, reviews and box office results with archive of content dating back to 1905.</p>
+                        <a href="">View project</a>
+                    </div>
+                    <span>
+                        <img src="assets/work-image-02.jpeg" alt="">
+                    </span>
+                </article>
+
+                <article class="work-article-container">
+                    <div>
+                        <h3>Worth</h3>
+                        <img src="assets/squiggle_line.svg">
+                        <p>A global media platform connecting a community that embraces worth beyond wealth.</p>
+                        <a href="">View project</a>
+                    </div>
+                    <span>
+                        <img src="assets/work-image-03.jpeg" alt="">
+                    </span>
+                </article>
+
+            </div>
+        </section>
+
+        <section class="outer-container services">
+
+            <div class="inner-container-wide">
+
+                <article class="service-article">
+                    <img src="" alt="">
+                    <h4>Web Design</h4>
+                    <p>Good web design is how companies stand out from their competitors. High quality web design leads to increased user conversion and engagement. Through a proven web design process, we help clients launch websites and products that improve on their bottom line.</p>
+                </article>
+
+                <article class="service-article">
+                    <img src="" alt="">
+                    <h4>Web Development</h4>
+                    <p>Modern websites need to be responsive and fully functional at all sizes. We develop all of our sites with a mobile first approach and ensure that our code quality is clean, organized and performant. Already have a design but need it developed? We’re here to help!</p>
+                </article>
+
+                <article class="service-article">
+                    <img src="" alt="">
+                    <h4>User Experience</h4>
+                    <p>In order to build successful products you have to understand the user. We create user personas, wireframes and prototypes to test with users. This allows us to gather feedback which helps to shape the product and can quickly eliminate potential risks – saving you time and money.</p>
+                </article>
+
+                <article class="service-article">
+                    <img src="" alt="">
+                    <h4>Logo Design + Branding</h4>
+                    <p>Nike, Apple, Coca-Cola, Starbucks. What do all of these brands have in common? Easily recognizable logos and brand identity. The best brands stand out from the crowd by having a clear and unique point of view. We will work with you to understand your vision and help create a unique brand identity and style guide for your company.</p>
+                </article>
+
+                <article class="service-article">
+                    <img src="" alt="">
+                    <h4>SEO</h4>
+                    <p>Do you want your site to rank higher in search results? Google is constantly changing their algorithms for how they rank pages. Don’t worry about constantly playing catch-up. We will make sure your website it optimized, providing you the best opportunities for organic search exposure.</p>
+                </article>
+
+                <article class="service-article">
+                    <img src="" alt="">
+                    <h4>Copy Writing</h4>
+                    <p> Brand messaging needs to be clear, direct and easy to understand to be effective. A unique tone of voice will help you stand out from the crowd and build brand loyalty. We work with you to establish your brand bible and ensure your messaging is focused and targeted.</p>
+                </article>
+            </div>
+        </section>
+
+        <section class="outer-container form">
+            <div class="inner-container-small">
+                <h2>Let's work together</h2>
+                <p>Have a question? Need a quote? Let us know!</p>
+                <form action="">
+
+                </form>
+            </div>
+        </section>
     </main>
 
-    <footer>
 
+    <footer class="outer-container footer">
+        <div class="inner-container-small">
+            <p>Business website opdracht © NOVI Hogeschool 2022</p>
+        </div>
     </footer>
 
 </body>
